--- a/source/_layouts/post_article.html
+++ b/source/_layouts/post_article.html
@@ -11,7 +11,7 @@ layout: post
         {% include c_post_aside.html post=page content=content %}
 
         <div class="post__body">
-            {{ page.excerpt | improve }}
+            {{ content | improve }}
         </div>
     </div>
 </div>
