--- a/source/_includes/post_bookmark.html
+++ b/source/_includes/post_bookmark.html
@@ -33,7 +33,7 @@
                 {% endif %}
             </blockquote>
             {% else %}
-            {{ post.excerpt | improve }}
+            {{ post.excerpt | markdownify | improve }}
             {% endif %}
         </div>
     </div>
