Added a new post. [8m0s]

--- a/source/_assets/scss/components/_responsive-elements.scss
+++ b/source/_assets/scss/components/_responsive-elements.scss
@@ -39,3 +39,16 @@
     max-width: 100%;
   }
 }
+
+.responsive-bandcamp {
+  @at-root #{&}__wrapper {
+    @include display(flex);
+    @include justify-content(center);
+  }
+
+  @at-root #{&}__element {
+    border: 0;
+    min-height: 720px;
+    min-width: 400px;
+  }
+}
