Got an old post working. [0]

--- a/source/_assets/scss/style.scss
+++ b/source/_assets/scss/style.scss
@@ -10,6 +10,7 @@ $large-screen: 50em;
 // Components
 @import 'components/archive';
 @import 'components/card';
+@import 'components/code-highlight';
 @import 'components/footer';
 @import 'components/form';
 @import 'components/header';
