Started working on a new quote type, scriptplay. [0]

--- a/source/_assets/scss/style.scss
+++ b/source/_assets/scss/style.scss
@@ -9,6 +9,7 @@ $large-screen: 50em;
 
 // Components
 @import 'components/archive';
+@import 'components/blockquote';
 @import 'components/card';
 @import 'components/code-highlight';
 @import 'components/footer';
