Fixed up some stuff. [8m0s]

--- a/source/_includes/c_post_aside.html
+++ b/source/_includes/c_post_aside.html
@@ -21,7 +21,7 @@
         {% endif %}
 
         <li class="post__meta post__meta--permalink">
-            <a href="{{ include.post.url }}">Permalink</a>
+            <a href="{{ include.post.url }}" title="{{ include.post.title }}">Permalink</a>
         </li>
     </ul>
 </div>
