Did a bunch of work. [0]

--- a/source/_assets/scss/style.scss
+++ b/source/_assets/scss/style.scss
@@ -18,6 +18,7 @@ $large-screen: 50em;
 @import 'components/navigation';
 @import 'components/pagination';
 @import 'components/responsive-elements';
+@import 'components/tag-cloud';
 
 // Layouts
 @import 'layouts/page';
