Did a bunch fo stuff. [0]

--- a/source/_assets/scss/_old-fashioned.scss
+++ b/source/_assets/scss/_old-fashioned.scss
@@ -33,6 +33,7 @@
 
 // Components
 // ----------
+@import 'old-fashioned/source/css/scss/components/alerts';
 @import 'old-fashioned/source/css/scss/components/background-variants';
 @import 'old-fashioned/source/css/scss/components/buttons';
 @import 'old-fashioned/source/css/scss/components/logos';
