--- a/source/_assets/scss/style.scss
+++ b/source/_assets/scss/style.scss
@@ -4,7 +4,7 @@
 @import 'neat/app/assets/stylesheets/neat';
 @import 'old-fashioned';
 
-$medium-screen: 30em;
+$medium-screen: 30em; // 675px
 $large-screen: 50em;
 
 // Components
