--- a/source/_includes/c_footer.html
+++ b/source/_includes/c_footer.html
@@ -37,7 +37,7 @@
                 <h6 class="footer__section-title">Follow</h6>
             </li>
             <li class="footer__section-item">
-                <a href="/feed/" class="footer__section-link">
+                <a href="/feeds/" class="footer__section-link">
                     RSS Feed
                 </a>
             </li>
