--- a/source/_layouts/post_article.html
+++ b/source/_layouts/post_article.html
@@ -3,15 +3,13 @@ layout: post
 ---
 
 <div class="post post--article">
-    <div class="post__wrapper">
-        {% include c_post_header.html post=page %}
-    </div>
+    <div id="js-content-expiry-alert" data-published="{{ page.date | date_to_xmlschema }}" data-updated="{% if page.updated %}{{ page.updated | date_to_xmlschema }}{% endif %}" data-refresh="{{ page.refresh }}"></div>
 
-    <div class="post__wrapper">
-        {% include c_post_aside.html post=page content=content %}
+    {% include c_post_header.html post=page %}
 
-        <div class="post__body">
-            {{ content | improve }}
-        </div>
-    </div>
+    <section class="post__content">
+        {{ content | improve }}
+    </section>
+
+    {% include c_post_footer.html post=post content=content %}
 </div>
