Setting up staticman comments. [0]

--- a/source/_includes/c_favicons.html
+++ b/source/_includes/c_favicons.html
@@ -1,7 +1,27 @@
-<link rel="icon" sizes="16x16 32x32" href="{% asset_path favicon.ico %}">
-<!--[if IE]><link rel="shortcut icon" href="{% asset_path favicon.ico %}"><![endif]-->
-
-<link rel="apple-touch-icon-precomposed" href="{% asset_path favicon152x152.png %}">
+<link rel="apple-touch-icon-precomposed" sizes="57x57" href="{% asset_path favicon57x57.png %}">
+<link rel="apple-touch-icon-precomposed" sizes="60x60" href="{% asset_path favicon60x60.png %}">
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="{% asset_path favicon72x72.png %}">
+<link rel="apple-touch-icon-precomposed" sizes="76x76" href="{% asset_path favicon76x76.png %}">
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="{% asset_path favicon114x114.png %}">
+<link rel="apple-touch-icon-precomposed" sizes="120x120" href="{% asset_path favicon120x120.png %}">
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="{% asset_path favicon144x144.png %}">
+<link rel="apple-touch-icon-precomposed" sizes="152x152" href="{% asset_path favicon152x152.png %}">
+<link rel="apple-touch-icon-precomposed" sizes="180x180" href="{% asset_path favicon180x180.png %}">
 
 <meta name="msapplication-TileColor" content="#24a5d4">
 <meta name="msapplication-TileImage" content="{% asset_path favicon144x144.png %}">
+<meta name="msapplication-square70x70logo" content="{% asset_path favicon70x70.png %}">
+<meta name="msapplication-square150x150logo" content="{% asset_path favicon150x150.png %}">
+<meta name="msapplication-wide310x150logo" content="{% asset_path favicon310x150.png %}" />
+<meta name="msapplication-square310x310logo" content="{% asset_path favicon310x310.png %}" />
+<meta name="theme-color" content="#ffffff">
+<meta name="msapplication-config" content="{{ '/browserconfig.xml' | prepend: site.baseurl | prepend: site.url }}">
+
+<link rel="icon" type="image/png" href="{% asset_path favicon16x16.png %}" sizes="16x16">
+<link rel="icon" type="image/png" href="{% asset_path favicon32x32.png %}" sizes="32x32">
+<link rel="icon" type="image/png" href="{% asset_path favicon96x96.png %}" sizes="96x96">
+<link rel="icon" type="image/png" href="{% asset_path favicon192x192.png %}" sizes="192x192">
+
+<link rel="manifest" href="{{ '/manifest.json' | prepend: site.baseurl | prepend: site.url }}">
+<link rel="icon" sizes="16x16 32x32" href="{% asset_path favicon.ico %}">
+<!--[if IE]><link rel="shortcut icon" href="{% asset_path favicon.ico %}"><![endif]-->
