--- a/source/_includes/c_metadata.html
+++ b/source/_includes/c_metadata.html
@@ -58,3 +58,14 @@
 <meta nmae="twitter:site" content="@MylesWeb">
 <meta name="twitter:creator" content="@MylesB">
 <!-- END Twitter Cards Metadata -->
+
+<!-- Apple Stuff -->
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta name="apple-touch-fullscreen" content="yes">
+<meta name="apple-mobile-web-app-title" content="Myles B.">
+<!-- END Apple Stuff -->
+
+<!-- Microsoft Stuff -->
+<meta name="application-name" content="Myles B.">
+<!-- END Microsoft Stuff -->
