Fixed up some stuff [1h]

--- a/source/_assets/scss/style.scss
+++ b/source/_assets/scss/style.scss
@@ -2,7 +2,7 @@
 // ------------
 @import 'bourbon/app/assets/stylesheets/bourbon';
 @import 'neat/app/assets/stylesheets/neat';
-@import 'old-fashioned';
+@import 'old_fashioned';
 
 $medium-screen: 30em; // 675px
 $large-screen: 50em;
