--- a/source/_assets/scss/components/_tag-cloud.scss
+++ b/source/_assets/scss/components/_tag-cloud.scss
@@ -1,8 +1,13 @@
 .tag-cloud {
   @include list-unstyled;
 
+  text-align: center;
+
   @at-root #{&}__item {
     display: inline-block;
+    padding-left: .25em;
+    padding-right: .25em;
+    vertical-align: middle;
 
     &:not(:last-child) {
       margin-right: 5px;
