Added a new post. [0]

--- a/source/_assets/scss/components/_responsive-elements.scss
+++ b/source/_assets/scss/components/_responsive-elements.scss
@@ -32,7 +32,10 @@
 }
 
 .responsive-image {
-  @at-root #{&}__wrapper {}
+  @at-root #{&}__wrapper {
+    margin: 0 auto;
+    text-align: center;
+  }
 
   @at-root #{&}__image {
     height: auto;
