--- a/source/_assets/scss/style.scss
+++ b/source/_assets/scss/style.scss
@@ -4,8 +4,8 @@
 @import 'neat/app/assets/stylesheets/neat';
 @import 'old_fashioned';
 
-$medium-screen: 30em; // 675px
-$large-screen: 50em;
+$medium-screen: 30rem; // 675px
+$large-screen: 50rem;
 
 // Components
 @import 'components/archive';
