--- a/source/_layouts/archive_day.html
+++ b/source/_layouts/archive_day.html
@@ -3,10 +3,11 @@ layout: archive
 ---
 
 <div class="archive">
-    <div class="archive__header">
+    <div class="page__header archive__header">
         <h1 class="archive__title">Archive of posts from {{ page.date | date: "%A %-d %B %Y" | improve }}</h1>
     </div>
 
+    <div class="page__content">
     {% for post in page.posts %}
         {% capture this %}{{ post.date | date: "%Y-%m-%d-%H" }}{% endcapture %}
         {% capture this_pretty %}{{ post.date | date: "%A %-d %B %Y %I:%M %p" }}{% endcapture %}
@@ -31,4 +32,5 @@ layout: archive
         {% endif %}
         {% endif %}
     {% endfor %}
+    </div>
 </div>
